test/sema/typeck/module/ctor-call-not-accessible.dora
fn f() { foo::Foo(); }
mod foo { class Foo }

//====================
// error: element is not accessible.
// --> ctor-call-not-accessible.dora:1:10
//  | fn f() { foo::Foo(); }
//             ~~~~~~~~~~
//  | mod foo { class Foo }
//  | 
// 1 error found.
